--- a/index.html
+++ b/index.html
@@ -5,6 +5,19 @@
     <title>전기쥐 배구</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <meta name="theme-color" content="#0c1024" />
+
+    <!-- favicon -->
+    <link rel="icon" href="favicon/favicon.ico" type="image/x-icon" />
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png" />
+
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png" />
+
+    <link rel="icon" type="image/png" sizes="192x192" href="favicon/android-chrome-192x192.png" />
+    <link rel="icon" type="image/png" sizes="512x512" href="favicon/android-chrome-512x512.png" />
+
+    <link rel="manifest" href="favicon/site.webmanifest" />
+
     <style>
       :root {
         --bg1: #0c1024;
