feat: OG 태그 및 메타데이터 추가

--- a/index.html
+++ b/index.html
@@ -18,6 +18,15 @@
 
     <link rel="manifest" href="favicon/site.webmanifest" />
 
+    <!-- og Tag -->
+    <meta property="og:title" content="전기쥐 배구" />
+    <meta property="og:description" content="간단하고 재밌는 전기쥐 배구 게임" />
+    <meta
+      property="og:image"
+      content="https://taehyun32.github.io/electric-mouse-volleyball/assets/images/thumbnail.png" />
+    <meta property="og:url" content="https://taehyun32.github.io/electric-mouse-volleyball/" />
+    <meta property="og:type" content="website" />
+
     <style>
       :root {
         --bg1: #0c1024;
